--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
     <div class="container">
       <span class="to-do"> To do: </span>
       <ul class="to-do">
-        <li>Format time to always show 2-digit hours and minutes</li>
-        <li>Add °C/°F toggle switch</li>
-        <li>Add km/h / mph toggle switch</li>
+        <li>Make °C/°F toggle switch functional</li>
         <li>Create colors sets for different weather</li>
         <li>
           Create buttons to switch color sets/weather to for demonstration
@@ -41,12 +39,12 @@
           </div>
           <div class="header-city-weather col-6">
             <div class="header-city-weather-position">
-              <h1 id="city-name">Schwarzenburg</h1>
-              <h2 id="date-and-time">Thursday, 12:47</h2>
+              <h1 id="city-name"></h1>
+              <h2 id="date-and-time"></h2>
               <h2>
-                <span id="header-weather-text">Rainy</span> |
-                <span id="header-temperature-degrees">11</span>
-                <span id="header-temperature-unit">°C</span>
+                <span id="header-weather-text"></span> |
+                <span id="header-temperature-degrees"></span>
+                <span class="temp-unit">°C</span>
               </h2>
             </div>
           </div>
@@ -94,19 +92,27 @@
           <div class="additionalInfo col-3">
             <div class="additionalInfoRow row">
               <div class="additionalInfoColLeft col">
-                11°C <i class="bi bi-thermometer-half"> </i><br />
-                11°C|2°C <i class="bi bi-speedometer2"> </i> <br />
-                86% <i class="bi bi-cloud-rain-fill"> </i><br />
-                79% <i class="bi bi-moisture"></i> <br />
+                <span id="feels-like-temp"></span>
+                <span class="temp-unit">°C</span>
+                <i class="bi bi-thermometer-half"> </i><br />
+                <span id="max-temp"></span>
+                <span class="temp-unit">°C</span>
+                <span id="max-min-bar">|</span>
+                <span id="min-temp"></span>
+                <span class="temp-unit">°C</span>
+                <i class="bi bi-speedometer2"> </i> <br />
+                <span id="humidity"></span>% <i class="bi bi-moisture"> </i
+                ><br />
               </div>
               <div class="additionalInfoColRight col">
-                <i class="bi bi-wind"></i> <span id="wind-speed">3</span>
-                <span id="wind-speed-unit">km/h</span> <br />
-                <i class="bi bi-sunrise-fill"> 07:15</i> <br />
-                <i class="bi bi-sunset-fill"> 17:11</i> <br />
-                <i class="bi bi-sunglasses"> 2</i><br />
+                <i class="bi bi-wind"></i> <span id="wind-speed"></span>
+                <span id="wind-speed-unit">m/s</span> <br />
+                <i class="bi bi-sunrise-fill"> </i>
+                <span id="sunrise"></span><br />
+                <i class="bi bi-sunset-fill"> </i>
+                <span id="sunset"></span><br />
               </div>
-              <i class="bi bi-moon-fill">Waxing Gibbous</i>
+              <i class="bi bi-moon-fill"><span id="lunar-phase"></span></i>
             </div>
           </div>
         </div>
@@ -116,35 +122,55 @@
             <div class="card-body">
               <h5 class="card-title">Friday</h5>
               <i class="bi bi-brightness-high"></i>
-              <p class="card-text">12°C | 3°C</p>
+              <p class="card-text">
+                12 <span class="temp-unit">°C</span> | 3<span class="temp-unit"
+                  >°C</span
+                >
+              </p>
             </div>
           </div>
           <div class="card col">
             <div class="card-body">
               <h5 class="card-title">Saturday</h5>
               <i class="bi bi-cloud-sun"></i>
-              <p class="card-text">8°C | 3°C</p>
+              <p class="card-text">
+                8<span class="temp-unit">°C</span> | 3<span class="temp-unit"
+                  >°C</span
+                >
+              </p>
             </div>
           </div>
           <div class="card col">
             <div class="card-body">
               <h5 class="card-title">Sunday</h5>
               <i class="bi bi-cloud-rain-heavy"></i>
-              <p class="card-text">8°C | 0°C</p>
+              <p class="card-text">
+                8<span class="temp-unit">°C</span> | 0<span class="temp-unit"
+                  >°C</span
+                >
+              </p>
             </div>
           </div>
           <div class="card col">
             <div class="card-body">
               <h5 class="card-title">Monday</h5>
               <i class="bi bi-cloud-fog"></i>
-              <p class="card-text">11°C | 4°C</p>
+              <p class="card-text">
+                11<span class="temp-unit">°C</span> | 4<span class="temp-unit"
+                  >°C</span
+                >
+              </p>
             </div>
           </div>
           <div class="card col">
             <div class="card-body">
               <h5 class="card-title">Tuesday</h5>
               <i class="bi bi-clouds"></i>
-              <p class="card-text">13°C | 3°C</p>
+              <p class="card-text">
+                13<span class="temp-unit">°C</span> | 3<span class="temp-unit"
+                  >°C</span
+                >
+              </p>
             </div>
           </div>
         </div>
@@ -157,7 +183,7 @@
               class="toggle__input"
               type="checkbox"
               id="unitToggle"
-              onclick="unitIsChecked()"
+              onclick="handleUnit()"
             />
             <div class="toggle__fill"></div>
           </label>
@@ -165,6 +191,8 @@
         </div>
       </form>
     </div>
+    <!-- <script src="index.js"></script> -->
+    <!-- <script src="script.js"></script> -->
     <script src="src/index.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
