--- a/index.html
+++ b/index.html
@@ -190,6 +190,14 @@
           <span>°F</span>
         </div>
       </form>
+      <div id="footer">
+        <a href="https://github.com/NasodQueen/Weather-App">Open-source code</a>
+        by Stephanie Zbinden <br />
+        What I listened to while coding:
+        <a href="https://youtu.be/gd6nEquwuhM" target="_blank">
+          Interstellar (Chillwave - Retrowave - Electronic Mix)</a
+        >
+      </div>
     </div>
     <!-- <script src="index.js"></script> -->
     <!-- <script src="script.js"></script> -->
