Converted m/s to km/h

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               </div>
               <div class="additionalInfoColRight col">
                 <i class="bi bi-wind"></i> <span id="wind-speed"></span>
-                <span id="wind-speed-unit">m/s</span> <br />
+                <span id="wind-speed-unit">km/h</span> <br />
                 <i class="bi bi-sunrise-fill"> </i>
                 <span id="sunrise"></span><br />
                 <i class="bi bi-sunset-fill"> </i>
