--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       </div>
       <form id="formSettings" class="row">
         <div id="temperature-toggle" class="col-2">
-          <span>°C</span>
+          <span class="temperature-toggle-units">°C</span>
           <label class="toggle" name="" for="unitToggle">
             <input
               class="toggle__input"
@@ -187,20 +187,25 @@
             />
             <div class="toggle__fill"></div>
           </label>
-          <span>°F</span>
+          <span class="temperature-toggle-units">°F</span>
         </div>
       </form>
       <div id="footer">
-        <a href="https://github.com/NasodQueen/Weather-App">Open-source code</a>
-        by Stephanie Zbinden <br />
-        What I listened to while coding:
-        <a href="https://youtu.be/gd6nEquwuhM" target="_blank">
-          Interstellar (Chillwave - Retrowave - Electronic Mix)</a
-        >
+        <div id="footer-disclaimer">
+          This project was coded by Stephanie Zbinden and is
+          <a href="https://github.com/NasodQueen/Weather-App"
+            >open-sourced on GitHub</a
+          >
+          and <a href="https://www.netlify.com">hosted on Netlify</a>.
+        </div>
+        <div id="footer-music">
+          What I listened to while coding:
+          <a href="https://youtu.be/gd6nEquwuhM" target="_blank">
+            Interstellar (Chillwave - Retrowave - Electronic Mix)</a
+          >
+        </div>
       </div>
     </div>
-    <!-- <script src="index.js"></script> -->
-    <!-- <script src="script.js"></script> -->
     <script src="src/index.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
