Added weatherSet Objects and updated to-do list

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         </li>
         <li>Add background colors/patterns</li>
         <li>Create a light/dark mode with switch</li>
+        <li>Add switching icons depending on weather</li>
+        <li>Add color change mechanic</li>
       </ul>
       <div class="main-body">
         <div class="header row">
