--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
           </div>
           <div class="header-weather-icon col-2">
-            <h1><i class="bi bi-cloud-drizzle"></i></h1>
+            <h1><i id="header-icon" class="bi"></i></h1>
           </div>
         </div>
         <div class="midBodyContainer row">
