Unit conversion (C° <-> F°) functional, minor fixes, to-do list updated

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     <div class="container">
       <span class="to-do"> To do: </span>
       <ul class="to-do">
-        <li>Make °C/°F toggle switch functional</li>
         <li>Create colors sets for different weather</li>
         <li>
           Create buttons to switch color sets/weather to for demonstration
@@ -29,8 +28,12 @@
         </li>
         <li>Add background colors/patterns</li>
         <li>Create a light/dark mode with switch</li>
-        <li>Add switching icons depending on weather</li>
-        <li>Add color change mechanic</li>
+        <li>Add switching icons depending on weather for forecast</li>
+        <li>Add color change mechanic according to current weather</li>
+        <li>Fix time zone issues</li>
+        <li>Add the mechanism to store recent user inputs (up to 3-ish)</li>
+        <li>Add popular cities as clickable links</li>
+        <li>Add forecast data</li>
       </ul>
       <div class="main-body">
         <div class="header row">
