Added Forecast API

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <li>Add popular cities as clickable links</li>
         <li>Add forecast data</li>
         <li>Add hover text for detailed info box</li>
+        <li>Maybe add weather alerts if I'm feeling fancy</li>
       </ul>
       <div class="main-body">
         <div class="header row">
