Fixed conversion to Fahrenheit in forecast, added clickable links to "Popular Cities", added user input storage up to 3 entries in "Recent Cities"

--- a/index.html
+++ b/index.html
@@ -88,11 +88,13 @@
             <div class="citiesRecentPopular row">
               <div class="recentCities col">
                 <h4>Recently searched cities:</h4>
-                Bern, Warminster, Orlando, ...
+                <span id="recentCitiesSpan"></span>
               </div>
               <div class="popularCities col">
                 <h4>Popular cities:</h4>
-                New York City, Paris, Tokyo, ...
+                <a href="#" id="new-york-link">New York City</a>
+                <a href="#" id="paris-link">Paris</a>
+                <a href="#" id="tokyo-link">Tokyo</a>
               </div>
             </div>
           </div>
